# zops

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
_wip_/: wip_clikit.py  wip_dotnet_di.py
basher/baseimages/: baseimages.lib.bash  build-image.pkr.hcl
bashlib/: install.sh
bashlib/baseimages/: baseimages.lib.bash  build-image.pkr.hcl
bashlib/dockerbin/: dockerbin.lib.bash
bashlib/provisioner/: provisioner.lib.bash
dockerbin/: dockerbin.lib.bash
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
monorepo/: README.md  monorepo-autogen.sh  monorepo.lib.bash  monorepo.py
monorepo/examples/: monorepo_mi-infra-iac.sh  monorepo_mi-infra-proxies.sh  monorepo_mi-tfmodules.sh
src/zerotk/: appliance.py  gitignored.py  path.py  pushpop.py  text.py  url.py  version.py  wires.py  wiring.py  yaml.py
src/zerotk/_tests/: test_gitignored.py  test_text.py  test_url.py  test_wires.py  test_wiring.py  test_yaml.py
src/zerotk/clikit/: app.py  command.py  console.py
src/zerotk/easyfs/: __init__.py  _easyfs.py  _easyfs_win32.py  _exceptions.py  (+1 more)
src/zops/: __init__.py  __main__.py
src/zz/: __main__.py  codegen.py  terraform.py
tests/: test_operations.py  test_text.py  test_zops.py
tests/clikit/: test_clikit_app.py  test_clikit_command.py  test_clikit_console.py
tests/zops/: test_zops.py
zerotk/operations/: __init__.py  cli.py
zerotk/zops/: __init__.py  cli.py
(+74 files in other folders)
