[tool.poetry]
name = "zops"
version = "2.0.0b1"
description = "Zero Operations Toolbox"
authors = ["Alexandre Andrade <kaniabi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zerotk/zops"
repository = "https://github.com/zerotk/zops"
# documentation = "https://infra1.readthedocs.io"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.scripts]
zops = "zops.__main__:main"
zz = "zz.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
attrs = "^23.2.0"
boto3 = "^1.34.106"
tabulate = "^0.9.0"
pyyaml = "^6.0.1"
addict = "^2.4.0"
jinja2 = "^3.1.4"
stringcase = "^1.2.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
